--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,15 @@ services:
                 condition: service_started
             db:
                 condition: service_healthy
+        environment:
+            - DB_HOST=${DB_HOST}
+            - DB_PORT=${DB_PORT}
+            - DB_NAME=${DB_NAME}
+            - DB_USER=${DB_USER}
+            - DB_PASSWORD=${DB_PASSWORD}
+            - REDIS_HOST=${REDIS_HOST}
+            - REDIS_PORT=${REDIS_PORT}
+            - REDIS_AUTH=${REDIS_AUTH}
 
     worker:
         build:
@@ -37,6 +46,15 @@ services:
                 condition: service_started
             db:
                 condition: service_healthy
+        environment:
+            - DB_HOST=${DB_HOST}
+            - DB_PORT=${DB_PORT}
+            - DB_NAME=${DB_NAME}
+            - DB_USER=${DB_USER}
+            - DB_PASSWORD=${DB_PASSWORD}
+            - REDIS_HOST=${REDIS_HOST}
+            - REDIS_PORT=${REDIS_PORT}
+            - REDIS_AUTH=${REDIS_AUTH}
 
     db:
         image: postgres:13.6-alpine
@@ -46,7 +64,7 @@ services:
             - worker
         shm_size: 256m
         ports:
-            - "5432:5432"
+            - "${DB_PORT}:5432"
         networks:
             - backend
         volumes:
@@ -54,9 +72,9 @@ services:
             - ./var/postgres-data:/var/lib/postgresql/data:cached
         environment:
             - PGDATA=/var/lib/postgresql/data/pgdata
-            - POSTGRES_USER=root
-            - POSTGRES_PASSWORD=root
-            - POSTGRES_DB=cmp
+            - POSTGRES_USER=${DB_USER}
+            - POSTGRES_PASSWORD=${DB_PASSWORD}
+            - POSTGRES_DB=${DB_NAME}
         command:
           - postgres
           - -c
@@ -73,10 +91,11 @@ services:
         profiles:
             - web
             - worker
-        command: redis-server --requirepass redis_pass
+        command: redis-server --requirepass ${REDIS_AUTH}
         ports:
-            - "6379:6379"
+            - "${REDIS_PORT}:6379"
         networks:
             - backend
+
 networks:
     backend:
